--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -23,8 +23,8 @@ services:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_2yNwCzOR1"
-      REACT_APP_CLIENT_ID: "1gtqihu9dfs17pde8n441n2nb"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_cnovgbqXm"
+      REACT_APP_CLIENT_ID: "3f9l50njb14rde0bc33dr4ufpf"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
