--- a/backend-flask/Dockerfile.prod
+++ b/backend-flask/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM 387543059434.dkr.ecr.ca-central-1.amazonaws.com/cruddur-python:3.10-slim-buster
+FROM 364455495412.dkr.ecr.us-east-1.amazonaws.com/cruddur-python:3.10-slim-buster
 
 # Inside Container
 # make a new folder inside container
