--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -20,6 +20,7 @@ tasks:
       source  "$THEIA_WORKSPACE_ROOT/bin/rds/update-sg-rule"  
   - name: react-js
     command: |
+      ruby $THEIA_WORKSPACE_ROOT/bin/frontend/generate-env
       cd frontend-react-js
       npm i
   - name: flask
@@ -30,7 +31,14 @@ tasks:
     before: |
       curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb"
       sudo dpkg -i session-manager-plugin.deb
+      cd $THEIA_WORKSPACE_ROOT
       cd backend-flask
+  - name: cdk
+    before: |
+      npm install aws-cdk -g
+      cd thumbing-serverless-cdk
+      cp .env.example .env
+      npm i      
 vscode:
    extensions:
     - 42Crunch.vscode-openapi
