--- a/thumbing-serverless-cdk/.env.example
+++ b/thumbing-serverless-cdk/.env.example
@@ -1,6 +1,7 @@
-UPLOADS_BUCKET_NAME="cruddur-uploaded-avatars"
-ASSETS_BUCKET_NAME="assets.cruddur.com"
+UPLOADS_BUCKET_NAME="cruddur-uploaded-avatars-cruddurproject.xyz"
+ASSETS_BUCKET_NAME="assets.cruddurproject.xyz"
 THUMBING_S3_FOLDER_OUTPUT="avatars/processed"
-THUMBING_WEBHOOK_URL="https://api.cruddur.com/webhooks/avatar"
+THUMBING_S3_FOLDER_INPUT="avatars/original"
+THUMBING_WEBHOOK_URL="https://api.cruddurproject.xyz/webhooks/avatar"
 THUMBING_TOPIC_NAME="cruddur-assets"
 THUMBING_FUNCTION_PATH="/workspace/aws-bootcamp-cruddur-2023/aws/lambdas/process-images"
