--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -25,6 +25,7 @@ tasks:
       npm i
   - name: flask
     command: |
+      ruby $THEIA_WORKSPACE_ROOT/bin/backend/generate-env
       cd backend-flask
       pip install -r requirements.txt 
   - name: fargate
